BUG: 89556 Added optional description to days,weeks, months Also optional dates for timeline prints
GUI:


svn path=/trunk/KDE/kdepim/; revision=913726

--- a/printing/calprintdayconfig_base.ui
+++ b/printing/calprintdayconfig_base.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>493</width>
-    <height>425</height>
+    <width>499</width>
+    <height>455</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_3" >
@@ -54,7 +54,7 @@ p, li { white-space: pre-wrap; }
         </property>
         <item>
          <property name="text" >
-          <string>2009-01-04</string>
+          <string>2009-01-19</string>
          </property>
         </item>
        </widget>
@@ -128,7 +128,7 @@ p, li { white-space: pre-wrap; }
         </property>
         <item>
          <property name="text" >
-          <string>2009-01-04</string>
+          <string>2009-01-19</string>
          </property>
         </item>
        </widget>
@@ -228,6 +228,16 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="3" column="0" >
+    <widget class="QCheckBox" name="mExcludeTime" >
+     <property name="whatsThis" >
+      <string>Check this option to exclude the time in description box</string>
+     </property>
+     <property name="text" >
+      <string>Exclude t&amp;ime from timetable detail display items</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0" >
     <widget class="QCheckBox" name="mIncludeTodos" >
      <property name="enabled" >
       <bool>false</bool>
@@ -240,7 +250,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="5" column="0" >
     <widget class="QCheckBox" name="mIncludeDescription" >
      <property name="whatsThis" >
       <string>Check this option to include the more detailed description for each event.</string>
@@ -250,7 +260,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="6" column="0" >
     <widget class="QCheckBox" name="mShowNoteLines" >
      <property name="whatsThis" >
       <string>Check this option to draw note lines </string>
@@ -260,7 +270,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="0" >
+   <item row="7" column="0" >
     <widget class="QCheckBox" name="mSingleLineLimit" >
      <property name="whatsThis" >
       <string>Check this option to limit events to a single line.</string>
@@ -270,7 +280,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QCheckBox" name="mColors" >
      <property name="whatsThis" >
       <string>If you want to use colors to distinguish certain categories on the print, check this option.</string>
@@ -280,7 +290,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="0" >
+   <item row="9" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
@@ -290,8 +300,8 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="sizeHint" stdset="0" >
       <size>
-       <width>485</width>
-       <height>23</height>
+       <width>482</width>
+       <height>40</height>
       </size>
      </property>
     </spacer>
