--- a/printing/calprintmonthconfig_base.ui
+++ b/printing/calprintmonthconfig_base.ui
@@ -169,6 +169,16 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="6" column="0" >
+    <widget class="QCheckBox" name="mIncludeDescription" >
+     <property name="whatsThis" >
+      <string>Check this option to include the more detailed description for each event.</string>
+     </property>
+     <property name="text" >
+      <string>Include &amp;Descriptions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0" >
     <widget class="QCheckBox" name="mShowNoteLines" >
      <property name="whatsThis" >
       <string>Check this option to show note lines.</string>
@@ -178,7 +188,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QCheckBox" name="mSingleLineLimit" >
      <property name="whatsThis" >
       <string>Check this option to limit events to a single line.</string>
@@ -188,7 +198,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="0" >
+   <item row="9" column="0" >
     <widget class="QCheckBox" name="mColors" >
      <property name="whatsThis" >
       <string>The timetable view supports colors. If you want to make use of colors you should check this option. The category colors will be used.</string>
@@ -198,7 +208,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="9" column="0" >
+   <item row="10" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
