BUG: 65192 GUI: Configurable ability to exclude Confidential and Private Incidences Day, Week, Month and ToDo prints.
svn path=/trunk/KDE/kdepim/; revision=913921

--- a/printing/calprintdayconfig_base.ui
+++ b/printing/calprintdayconfig_base.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>499</width>
-    <height>455</height>
+    <width>503</width>
+    <height>520</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_3" >
@@ -228,6 +228,38 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="3" column="0" >
+    <widget class="QGroupBox" name="mSecurity" >
+     <property name="title" >
+      <string>Security Exclusions</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout" >
+      <property name="topMargin" >
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QCheckBox" name="mExcludeConfidential" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude confidential events.</string>
+        </property>
+        <property name="text" >
+         <string>Exclude c&amp;onfidential</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="mExcludePrivate" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude private events</string>
+        </property>
+        <property name="text" >
+         <string>Exclude pri&amp;vate</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="4" column="0" >
     <widget class="QCheckBox" name="mExcludeTime" >
      <property name="whatsThis" >
       <string>Check this option to exclude the time in description box</string>
@@ -237,7 +269,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="5" column="0" >
     <widget class="QCheckBox" name="mIncludeTodos" >
      <property name="enabled" >
       <bool>false</bool>
@@ -250,7 +282,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="6" column="0" >
     <widget class="QCheckBox" name="mIncludeDescription" >
      <property name="whatsThis" >
       <string>Check this option to include the more detailed description for each event.</string>
@@ -260,7 +292,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="0" >
+   <item row="7" column="0" >
     <widget class="QCheckBox" name="mShowNoteLines" >
      <property name="whatsThis" >
       <string>Check this option to draw note lines </string>
@@ -270,7 +302,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QCheckBox" name="mSingleLineLimit" >
      <property name="whatsThis" >
       <string>Check this option to limit events to a single line.</string>
@@ -280,7 +312,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="0" >
+   <item row="9" column="0" >
     <widget class="QCheckBox" name="mColors" >
      <property name="whatsThis" >
       <string>If you want to use colors to distinguish certain categories on the print, check this option.</string>
@@ -290,7 +322,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="9" column="0" >
+   <item row="10" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
