--- a/printing/calprintweekconfig_base.ui
+++ b/printing/calprintweekconfig_base.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>626</width>
-    <height>470</height>
+    <width>684</width>
+    <height>503</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout" >
@@ -252,6 +252,38 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="3" column="0" >
+    <widget class="QGroupBox" name="mSecurity" >
+     <property name="title" >
+      <string>Security Exclusions</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout" >
+      <property name="topMargin" >
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QCheckBox" name="mExcludeConfidential" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude confidential events.</string>
+        </property>
+        <property name="text" >
+         <string>Exclude c&amp;onfidential</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="mExcludePrivate" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude private events</string>
+        </property>
+        <property name="text" >
+         <string>Exclude pri&amp;vate</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="4" column="0" >
     <widget class="QCheckBox" name="mExcludeTime" >
      <property name="whatsThis" >
       <string>Check this option to exclude the time in description box</string>
@@ -261,7 +293,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="5" column="0" >
     <widget class="QCheckBox" name="mIncludeTodos" >
      <property name="enabled" >
       <bool>false</bool>
@@ -274,7 +306,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="6" column="0" >
     <widget class="QCheckBox" name="mIncludeDescription" >
      <property name="whatsThis" >
       <string>Check this option to include the more detailed description for each event.</string>
@@ -284,7 +316,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="0" >
+   <item row="7" column="0" >
     <widget class="QCheckBox" name="mShowNoteLines" >
      <property name="whatsThis" >
       <string>Check this option to draw note lines.</string>
@@ -294,7 +326,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QCheckBox" name="mSingleLineLimit" >
      <property name="whatsThis" >
       <string>Check this option to limit events to a single line.</string>
@@ -304,7 +336,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="0" >
+   <item row="9" column="0" >
     <widget class="QCheckBox" name="mColors" >
      <property name="whatsThis" >
       <string>The timetable view supports colors. If you want to make use of colors you should check this option. The category colors will be used.</string>
@@ -314,7 +346,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="9" column="0" >
+   <item row="10" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
