--- a/printing/calprintmonthconfig_base.ui
+++ b/printing/calprintmonthconfig_base.ui
@@ -8,7 +8,7 @@
     <x>0</x>
     <y>0</y>
     <width>578</width>
-    <height>384</height>
+    <height>428</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout" >
@@ -126,6 +126,38 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="2" column="0" >
+    <widget class="QGroupBox" name="mSecurity" >
+     <property name="title" >
+      <string>Security Exclusions</string>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout" >
+      <property name="topMargin" >
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QCheckBox" name="mExcludeConfidential" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude confidential events.</string>
+        </property>
+        <property name="text" >
+         <string>Exclude c&amp;onfidential</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="mExcludePrivate" >
+        <property name="whatsThis" >
+         <string>Check this option to exclude private events</string>
+        </property>
+        <property name="text" >
+         <string>Exclude pri&amp;vate</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="3" column="0" >
     <widget class="QCheckBox" name="mWeekNumbers" >
      <property name="whatsThis" >
       <string>Enable this to print week numbers at the left of each row.</string>
@@ -135,7 +167,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
+   <item row="4" column="0" >
     <widget class="QCheckBox" name="mRecurDaily" >
      <property name="whatsThis" >
       <string>With this option it is possible to leave out the daily recurring to-dos and events in the print. They take a lot of space and make the month view needlessly complicated.</string>
@@ -145,7 +177,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="4" column="0" >
+   <item row="5" column="0" >
     <widget class="QCheckBox" name="mRecurWeekly" >
      <property name="whatsThis" >
       <string>Similar to "Print daily recurring to-dos and events". Weekly to-dos and events will be omitted when making a print of the selected month.</string>
@@ -155,7 +187,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="5" column="0" >
+   <item row="6" column="0" >
     <widget class="QCheckBox" name="mIncludeTodos" >
      <property name="enabled" >
       <bool>false</bool>
@@ -168,7 +200,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="6" column="0" >
+   <item row="7" column="0" >
     <widget class="QCheckBox" name="mIncludeDescription" >
      <property name="whatsThis" >
       <string>Check this option to include the more detailed description for each event.</string>
@@ -178,7 +210,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="7" column="0" >
+   <item row="8" column="0" >
     <widget class="QCheckBox" name="mShowNoteLines" >
      <property name="whatsThis" >
       <string>Check this option to show note lines.</string>
@@ -188,7 +220,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="8" column="0" >
+   <item row="9" column="0" >
     <widget class="QCheckBox" name="mSingleLineLimit" >
      <property name="whatsThis" >
       <string>Check this option to limit events to a single line.</string>
@@ -198,7 +230,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="9" column="0" >
+   <item row="10" column="0" >
     <widget class="QCheckBox" name="mColors" >
      <property name="whatsThis" >
       <string>The timetable view supports colors. If you want to make use of colors you should check this option. The category colors will be used.</string>
@@ -208,7 +240,7 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </item>
-   <item row="10" column="0" >
+   <item row="11" column="0" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
