QLineEdit -> KLineEdit QComboBox -> KComboBox MERGE: none DO_NOT_BACKPORT:
svn path=/trunk/KDE/kdepim/; revision=1005622

--- a/filteredit_base.ui
+++ b/filteredit_base.ui
@@ -61,7 +61,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="mNameLineEdit" />
+         <widget class="KLineEdit" name="mNameLineEdit" />
         </item>
        </layout>
       </item>
