--- a/kogroupwareprefspage.ui
+++ b/kogroupwareprefspage.ui
@@ -216,7 +216,7 @@ Note: If KOrganizer is acting as a KDE Kolab client, this is not required, as th
            <widget class="Line" name="frame5" />
           </item>
           <item row="0" column="1" >
-           <widget class="QLineEdit" name="publishUrl" >
+           <widget class="KLineEdit" name="publishUrl" >
             <property name="enabled" >
              <bool>true</bool>
             </property>
@@ -227,7 +227,7 @@ Ask the server administrator for this information.</string>
            </widget>
           </item>
           <item row="3" column="1" >
-           <widget class="QLineEdit" name="publishPassword" >
+           <widget class="KLineEdit" name="publishPassword" >
             <property name="whatsThis" >
              <string>Enter your groupware server login password here.</string>
             </property>
@@ -265,7 +265,7 @@ A Kolab2 server specificity: Registered your UID (Unique IDentifier). By default
            </widget>
           </item>
           <item row="2" column="1" >
-           <widget class="QLineEdit" name="publishUser" >
+           <widget class="KLineEdit" name="publishUser" >
             <property name="minimumSize" >
              <size>
               <width>120</width>
@@ -406,7 +406,7 @@ Ask the server administrator for this information.</string>
            <number>6</number>
           </property>
           <item row="3" column="1" >
-           <widget class="QLineEdit" name="retrievePassword" >
+           <widget class="KLineEdit" name="retrievePassword" >
             <property name="whatsThis" >
              <string>Enter your groupware server login password here.</string>
             </property>
@@ -416,7 +416,7 @@ Ask the server administrator for this information.</string>
            </widget>
           </item>
           <item row="2" column="1" >
-           <widget class="QLineEdit" name="retrieveUser" >
+           <widget class="KLineEdit" name="retrieveUser" >
             <property name="whatsThis" >
              <string>Enter the login information relative to your account on the server here.
 
@@ -425,7 +425,7 @@ A Kolab2 server specificity: Registered your UID (Unique IDentifier). By default
            </widget>
           </item>
           <item row="0" column="1" >
-           <widget class="QLineEdit" name="retrieveUrl" >
+           <widget class="KLineEdit" name="retrieveUrl" >
             <property name="enabled" >
              <bool>true</bool>
             </property>
