Finally implement email reminders. BUG: 50292 DO_NOT_BACKPORT: new feature, new i18n strings.
svn path=/trunk/KDE/kdepim/; revision=1014409

--- a/koeditoralarms_base.ui
+++ b/koeditoralarms_base.ui
@@ -314,7 +314,7 @@
          <item>
           <widget class="QRadioButton" name="mTypeEmailRadio">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="toolTip">
             <string>Send email when the reminder is triggered</string>
