more work on the side-by-side view. for some reason, my selection models lose their selection between passing them to the view and actually using them. Don't get it, atm.
svn path=/branches/work/akonadi-ports/kdepim/; revision=1042760

--- a/multiagendaviewconfigwidget.ui
+++ b/multiagendaviewconfigwidget.ui
@@ -81,7 +81,13 @@
      <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="label">
+        <widget class="QLabel" name="selectedCalendarsLabel">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="text">
           <string>Selected Calendars</string>
          </property>
@@ -89,6 +95,12 @@
        </item>
        <item>
         <widget class="QStackedWidget" name="selectionStack">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+           <horstretch>1</horstretch>
+           <verstretch>1</verstretch>
+          </sizepolicy>
+         </property>
          <property name="currentIndex">
           <number>-1</number>
          </property>
